<resources>
    <string name="app_name">Mandu.in</string>
    <string name="web_client_id" translatable="false">278051793691-h6skfoh36kvnl354nd6353at0nk871bv.apps.googleusercontent.com</string>
    <string name="cd_button_next_onboard">Button Next OnBoard</string>
    <string name="login_now">Login Now</string>
    <string name="desc_login">Please login to continue using our app</string>
    <string name="text_skip">Skip</string>
    <string name="dummy_title">Title\nTitle\nTitle</string>
    <string name="dummy_description">Description</string>
    <string name="cd_onboard_image">Onboard Image</string>
    <string name="cd_background_splash">Background Splash</string>
    <string name="cd_application_logo">Application Logo</string>
    <string name="text_or">or login with</string>
    <string name="image">image</string>
    <string name="explore">Explore</string>
    <string name="bookmark">Bookmarked Places</string>
    <string name="profile">Profile</string>
    <string name="travel_news">Travel News</string>
    <string name="logout">Log Out</string>
    <string name="please_wait">Please Wait…</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="logout_dialog_message">Are you sure want to Logout?</string>
    <string name="empty_field">This field is empty</string>
    <string name="email_not_valid">Invalid Format Email</string>
    <string name="invalid_password">Password must be at least 6 characters long</string>
    <string name="error_occured">An Error Occurred: %s</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="permission_not_granted">Allow permission to use camera feature</string>

    <!-- String On Login Layout -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="cd_button_google_login">Button Google Login</string>
    <string name="login">Login</string>
    <string name="login_success">Login Success</string>
    <string name="login_failed">Login Failed, please try again. Error: %s</string>

    <!--String On Register Layout-->
    <string name="register_now">Register Now</string>
    <string name="desc_register">Please fill the fields and create account</string>
    <string name="fullname">Fullname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="register_success">Register Success</string>
    <string name="register_failed">Register Failed. Error: %s</string>
    <string name="already_have_account">Already have account?</string>
    <string name="invalid_confirm_password">The password confirmation does not match</string>
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
    <string name="msg_available_soon">This Content Available Soon</string>

    <!--String On Forgot Password Layout-->
    <string name="reset_password">Reset Password</string>
    <string name="desc_reset_password">Enter the email associated with your account and we’ll send an email with instructions to reset your password.</string>
    <string name="send_instructions">Send Email</string>
    <string name="success_send">Send Email Reset Password Successfully</string>
    <string name="failed_send">Failed to Send Email Reset Password</string>

    <!--String On Reset Password Success Layout-->
    <string name="check_your_email">Check your Email</string>
    <string name="desc_check_your_email">We have sent a password recover instructions to your email.</string>
    <string name="finish">Finish</string>

    <!-- String On OnBoarding Layout -->
    <string-array name="title">
        <item>Detect\nthe\nLandmark</item>
        <item>Explore\nNew\nPlaces</item>
        <item>Gain\nNew\nInsight</item>
    </string-array>

    <string-array name="description">
        <item>Scan and get attractive information\nfrom each landmark.</item>
        <item>Explore new places around you\neasily and quickly.</item>
        <item>Gain new insights from the places\nyou have visited.</item>
    </string-array>

    <string-array name="image">
        <item>@drawable/onboard_slide1</item>
        <item>@drawable/onboard_slide2</item>
        <item>@drawable/onboard_slide3</item>
    </string-array>

    <!--    String On Home Layout-->
    <string name="greetings1">Discover the</string>
    <string name="greetings2">beauty of nusantara</string>
    <string name="lawang_sewu">Lawang Sewu</string>
    <string name="loc_lawang_sewu">Semarang, Central Java</string>
    <string name="tugu_jogja">Jogja Monument</string>
    <string name="loc_tugu_jogja">Special Region of Yogyakarta</string>
    <string name="masjid_agung">Central Java Grand Mosque</string>
    <string name="loc_masjid_agung">Semarang, Central Java</string>
    <string name="jogja_kembali">Jogja Kembali Museum</string>
    <string name="loc_jogja_kembali">Special Region of Yogyakarta</string>
    <string name="borobudur">Borobudur Temple</string>
    <string name="loc_borobudur">Magelang, Central Java</string>
    <string name="prambanan">Prambanan Temple</string>
    <string name="loc_prambanan">Special Region of Yogyakarta</string>
    <string name="see_all_news">See all travel news</string>

    <!--    String On Detail Activity-->
    <string name="description">Description</string>
    <string name="desc_landmark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="add_comment">Add comment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="toast_review">Comment is under development</string>
    <string name="review">Comment</string>
    <string name="landmark">Landmark</string>
    <string name="tourism">Wisata</string>

    <!--    String On Camera Activity-->
    <string name="camera_failed">Failed to show camera</string>
    <string name="detect">Detect</string>
    <string name="detect_failed">Failed to Detect</string>
    <string name="accuracy">Accuracy</string>
    <string name="show_maps">Show Maps</string>
    <string name="detect_again">Detect Again</string>
    <string name="no_object">No Object Detected</string>

    <!--    String on Explore-->
    <string name="available_soon">Available Soon</string>
    <string name="desc_available_soon">Tourism data is being processed.</string>
    
    <!--    String On Maps Activity-->
    <string name="failed_get_data_maps">Failed to Get Data Maps</string>
    <string name="location_not_found">Location is not found. Please turn on your GPS</string>
    <string name="location_not_granted">Location not granted</string>

    <!--    String Bookmark-->
    <string name="success_unbookmark">Successfully delete from bookmark</string>
    <string name="success_bookmark">Successfully save to bookmark</string>
    <string name="confirm_delete_bookmark">Confirm Delete</string>
    <string name="confirm_delete_bookmark_message">Are you sure want to delete this place from Bookmark?</string>
    <string name="no_place_saved">No place saved</string>
    <string name="empty_bookmark">You haven\'t saved any place yet. Please explore and save place to display them here.</string>

</resources>