<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    tools:context=".ui.auth.RegisterActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/cd_application_logo" />

    <TextView
        android:id="@+id/btn_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        style="@style/headerText"
        android:text="@string/register_now"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_desc_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        style="@style/subHeaderText"
        android:text="@string/desc_register"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/btn_to_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_fullname"
        style="@style/customInput">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_fullname"
            style="@style/editText"
            android:hint="@string/fullname"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_email"
        style="@style/customInput">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            style="@style/editText"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_password"
        style="@style/customInput"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/dark_blue">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            style="@style/editText"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_confirm_password"
        style="@style/customInput"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/dark_blue">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_confirm_password"
            style="@style/editText"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="text_input_layout_fullname,text_input_layout_email,text_input_layout_password,text_input_layout_confirm_password"
        android:layout_marginTop="8dp"
        app:flow_verticalGap="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_desc_register"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        style="@style/button"
        android:text="@string/register"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_or"/>

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/text_or"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/dark_blue"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/iv_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/iv_google"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_google"
        android:src="@drawable/google"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@id/dont_have_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/cd_button_google_login" />

    <LinearLayout
        android:id="@+id/dont_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="48dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/subHeaderText"
            android:text="@string/already_have_account"/>
        <TextView
            android:id="@+id/btn_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/login"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_semi_bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>