<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordSuccessActivity">

    <ImageView
        android:id="@+id/iv_header"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:src="@drawable/email_sent"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tv_email_sent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        style="@style/headerText"
        android:text="@string/check_your_email"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/iv_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_desc_email_sent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="28dp"
        android:paddingRight="28dp"
        style="@style/subHeaderText"
        android:text="@string/desc_check_your_email"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_email_sent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <!--    Button Finish-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_desc_email_sent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:paddingLeft="28dp"
        android:paddingRight="28dp">
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="64dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cornerRadius="5dp"
            android:text="@string/finish"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_semi_bold"
            android:textSize="20sp"
            android:onClick="onClickFinish"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>