<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp">

    <TextView
        android:id="@+id/tv_title_onboard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/dummy_title"
        android:textSize="36sp"
        android:textColor="@color/dark_blue"
        android:fontFamily="@font/poppins_bold"
        android:letterSpacing="0.05"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/iv_onboard"
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/onboard_slide1"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toBottomOf="@id/tv_title_onboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/cd_onboard_image"/>

    <TextView
        android:id="@+id/tv_desc_onboard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/dummy_description"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/dark_blue"
        android:fontFamily="@font/poppins_regular"
        android:letterSpacing="0.02"
        app:layout_constraintTop_toBottomOf="@id/iv_onboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>