<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:id="@+id/iv_header"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:src="@drawable/forgot_pass"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        style="@style/headerText"
        android:text="@string/forgot_password"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/iv_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_desc_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="28dp"
        android:paddingRight="28dp"
        style="@style/subHeaderText"
        android:text="@string/desc_reset_password"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!--    Layout Text Input-->
    <LinearLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="28dp"
        android:paddingRight="28dp"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@id/tv_desc_forgot_password"
        android:orientation="vertical">
        <!--EditText Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/hint"
            style="@style/customInput">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:backgroundTint="@color/gray_card"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <!--    Button Send Instructions-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:paddingLeft="28dp"
        android:paddingRight="28dp">
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="64dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cornerRadius="5dp"
            android:text="@string/send_instructions"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_semi_bold"
            android:textSize="20sp"
            android:onClick="onClickSendInstructions"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>