<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/iv_place"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_marginVertical="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="top"
                    tools:src="@drawable/image_preview"
                    android:scaleType="centerCrop"
                    card_view:riv_corner_radius="8dp"
                    android:contentDescription="@string/image" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="8dp">
                        <TextView
                            android:id="@+id/tv_place"
                            style="@style/placeText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/lawang_sewu"/>

                        <TextView
                            android:id="@+id/tv_location"
                            style="@style/locationText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="8dp"
                            android:maxLines="2"
                            android:text="@string/loc_borobudur" />
                </LinearLayout>
        </LinearLayout>
</androidx.cardview.widget.CardView>